--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <canvas id="heartCanvas"></canvas>
 
     <div class="ui-layer">
-        <button id="startBtn" class="start-btn">دوسي هنا يا ست البنات 😂❤️</button>
+        <button id="startBtn" class="start-btn">دوسي هنا يا وليه😂❤️</button>
 
         <div id="messageBox" class="message-container">
             <div id="typewriter" class="message-text"></div>
